Put links back till we decide how they should be styled; fixed spacing of search icon with new focus coloring

--- a/source/css/scss/patterns/01-atoms/_buttons.scss
+++ b/source/css/scss/patterns/01-atoms/_buttons.scss
@@ -35,6 +35,7 @@
   background-color: transparent;
   color: $white;
   border: 1px solid $white;
+  border-bottom: 1px solid $white;
   &:hover {
     background-color: $white;
     color: $ucsf-blue;
