--- a/source/css/scss/patterns/01-atoms/_links.scss
+++ b/source/css/scss/patterns/01-atoms/_links.scss
@@ -9,11 +9,13 @@
 }*/
 a {
   text-decoration: none;
-  border-bottom: 1px dashed $ucsf-blue;
-  padding-bottom: 2px;
+  //border-bottom: 1px dashed $ucsf-blue;
   color: $ucsf-blue;
+  //text-shadow: 1px 2px 0 #fff, -1px 1px 0 #fff, 2px 0 0 #fff, -2px 0 0 #fff;
+//box-shadow: inset 0 -1px 0 0 #fff, inset 0 -3px 0 0 #bdb;
   &:hover {
-    border-bottom: 2px solid $ucsf-blue;
+    //border-bottom: 2px solid $ucsf-blue;
+    color: $ucsf-navyblue;
   }
 }
 #footer {
@@ -21,14 +23,11 @@ a {
     border-bottom-color: $white;
   }
 }
-h1, h2, h3, h4, h5, h6, #header, .contact-widget__social-media-links, .submenu {
+h1, h2, h3, h4, h5, h6, #header, .contact-widget__social-media-links, .submenu, .site-top-menu, .tabs__item, [class*="__image"], [id*="atoms-banner-"], [id*="-image"], .accordion__header, .box, .social-media-share, .hero {
   a {
     text-decoration: none;
     border-bottom: none;
-    padding-bottom: 0;
-    &:hover {
-
-    }
+    text-shadow: none;
   }
 }
 /*a.border-link-one {
