--- a/source/css/scss/patterns/02-molecules/_search.scss
+++ b/source/css/scss/patterns/02-molecules/_search.scss
@@ -32,8 +32,8 @@
   .fa-search{
     &:before {
       position: absolute;
-      top: 4px;
-      right: 0;
+      top: 7px;
+      right: 5px;
       padding-left: 10px;
       color: $darkestgray;
       z-index: 10;
